# primer-on-statistics

./: .buildinfo  .gitignore  LICENSE  README.md  _config.yml  _toc.yml  genindex.html  index.html  objects.inv  pyproject.toml  references.bib  requirements.txt  search.html  searchindex.js  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
_sources/doc/: intro.md
_sources/doc/overview/: statistical_inference.md
_sources/doc/probability/: axioms.ipynb  conditional_probability.ipynb  distribution.ipynb  lln_and_clt.ipynb  moment.ipynb  random_variable.ipynb  theorems.ipynb
_sources/doc/statistics/: hypothesis_testing.ipynb
_static/: style.css
doc/: intro.html  intro.md
doc/overview/: statistical_inference.html
doc/probability/: axioms.html  axioms.ipynb  conditional_probability.html  conditional_probability.ipynb  distribution.html  distribution.ipynb  lln_and_clt.html  lln_and_clt.ipynb  moment.html  moment.ipynb  random_variable.html  random_variable.ipynb  theorems.html  theorems.ipynb
doc/statistics/: hypothesis_testing.html  hypothesis_testing.ipynb
