[tool.poetry]
name = "primer-on-statistics"
version = "0.1.0"
description = ""
authors = ["Sean Chang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter-book = "^0.11.1"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
plotly = "^5.1.0"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
