[tool.poetry]
name = "primer-on-statistics"
version = "0.1.0"
description = ""
authors = ["Sean Chang"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
jupyter-book = "^0.11.1"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
plotly = "^5.1.0"
ipywidgets = "^7.6.3"
more-itertools = "^8.8.0"
jupyter = "^1.0.0"
sphinx-sitemap = "^2.2.0"
scipy = "^1.7.0"
sphinx-inline-tabs = "^2021.4.11-beta.9"

[tool.poetry.dev-dependencies]
pylint = "^2.9.5"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
